# conf

./: .Xdefaults  .gitmodules  .xinitrc  LICENSE  ProjectHome.md  README  README.LESSOPEN  README.zsh.rst  dot.Xdefaults  dot.Xresources  dot.Xresources.old  dot.emacs  dot.gitattributes  dot.gitconfig  dot.gitignore  dot.haskeline  dot.pythonrc  dot.screenrc  dot.sqliterc  dot.tmux.conf  dot.tridactylrc  dot.vimperatorrc  dot.xsession  dot.zprofile  dot.zshenv  dot.zshrc  install-conf.py  install-git.sh  xmonad.hs
dot.config/: redshift.conf
dot.emacs.d/: Cask  README  control-lock.el  galois-office.system-custom.el  msrc-linux.system-custom.el  test-init.el  ubuntu10.10-desktop.system-custom.el  ubuntu8.10-on-laptop.system-custom.el  uw-math-dept.system-custom.el
dot.ghc/: ghci-debug.conf  ghci-prompt.conf  ghci.conf
dot.pip/: pip.conf
dot.subversion/: config
dot.xmonad/: .gitignore  README.md  build  conathan-xsession.desktop  my-xmonad.cabal  stack.yaml  startup-hook.sh  xmonad.hs
dot.zsh/: README.rst  dot.zshenv  dot.zshrc
fdi/: README  laptop-keyboard-mouse-wheel.fdi  usb-keyboard-mouse-wheel.fdi
gentoo/: LESSOPEN
install/: cask.sh  curl.sh  git.sh
lib/: ctrl-slash-is-undo.kmap  less.vim
procmail/: README  rc.gmail
scripts/: capswap.sh  eclipse  flip-odd-pages.sh  gen-fix-ssh.sh  gpg-cat.sh  gpg-edit.sh  gpg-view.sh  growisofs.py  ipydb.py  its-all-text-emacs.sh  lpr-shell.sh  maybe-capswap.sh  nc:fix-nordvpn.sh  pdfnup  power-save.sh  ps-print-with-emacs.sh  resize-photos.sh  set_ghc.py  speedcontrol  speedcontrol.c
sshlpr/: lpr-shell.sh  (+2 more)
(+90 files in other folders)
