name:                my-xmonad
version:             0.1.0.0
description:         Trick Stack into building my xmonad.hs :P
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             xmonad.hs
  default-language:    Haskell2010
  ghc-options: -Wunused-imports
  build-depends:       base
                     , containers
                     , xmonad
                     , xmonad-contrib
